# ucx-py

./: .flake8  .flake8.cython  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  MANIFEST.in  Makefile  README.md  VERSION  dependencies.yaml  no-libnuma.patch  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  ucx-setup.sh
.github/: CODEOWNERS  ops-bot.yaml
.github/build-scripts/: patch-wheel.sh
.github/workflows/: build.yaml  docs.yml  pr.yaml  rtd.yml  test.yaml  wheels.yml
benchmarks/: bandwidth-bench.py  bi-bandwidth-bench.py  bibw-asyncio.py  bibw-future.py  cudf-merge.py  cudf_merge.py  dask-join.py  lat-asyncio-blind-recv.py  lat-asyncio-fast.py  lat-asyncio.py  lat-bw.py  lat-fast.py  lat-future.py  lat.py  latency-bench.py  local-send-recv-core.py  local-send-recv.py  recv-into-client.py  send-recv-core.py  send-recv.py  unibw-asyncio.py  unibw-future.py
benchmarks/old_benchmarks/: bibw-future.py  lat-asyncio.py  unibw-future.py
benchmarks/old_tests/: client-server-duality.py  cpu-util.py  dask-dot-prod.py  dask-dot-prod2.py  dask-gpu-scatter.py  dask-sum.py  future-recv-fast.py  multiple-client-ep-same-addr.py  multiple-listener-client-test.py  multiple-listener-test.py  send-recv-py-obj.py  single.py
ci/: build_docs_pre_install.sh  build_python.sh  build_wheel.sh  check_style.sh  run_benchmark_pytests.sh  run_pytests.sh  test_python.sh  test_wheel.sh
ci/checks/: style.sh
ci/cpu/: build.sh  upload.sh
ci/gpu/: build.sh
ci/local/: README.md
ci/release/: apply_wheel_modifications.sh  update-version.sh
conda-recipes/: README.md
conda-recipes/ucx/: build.sh  meta.yaml
conda-recipes/ucx-gpu/: build.sh  meta.yaml
conda-recipes/ucx-py/: meta.yaml
conda-recipes/ucx-py-gpu/: build.sh  meta.yaml
conda/environments/: builddocs.yml  builddocs_py37.yml
conda/recipes/ucx-py/: conda_build_config.yaml  meta.yaml  recipe.yaml
debug-tests/: README.md  client.py  debug_utils.py  multi-node-workers.sh  recv.py  scheduler.sh  send.py  server.py  test_endpoint_error_callback.py  test_send_recv_many_workers.py
doc/: code-organization.md
docker/: Dockerfile  README.md  UCXPy-CUDA.dockerfile  UCXPy-MOFED.dockerfile  UCXPy-rdma-core.dockerfile  bench-all.sh  build-ucx-py.sh  build-ucx.sh  run.sh  ucx-py-cuda11.5.yml  ucx-py-cuda12.5.yml
docs/source/: api.rst  conf.py  configuration.rst  dask.rst  deployment.rst  glossary.rst  index.rst  install.rst  os-limits.rst  quickstart.rst  send-recv.rst  transport-monitoring.rst  ucx-debug.rst  ucx-intro.rst
examples/: cudf-example.py  cupy-example.py  rma_example_client.py  rma_example_server.py
pybind/: buffer_ops.c  buffer_ops.h  call_myucp.pyx  code-organization.md  common.h  myucp.c  myucp.h  setup.py  ucp_py.pyx  ucp_py_buffer_helper.pyx  ucp_py_c_fxns.pyx  ucp_py_ucp_fxns.c  ucp_py_ucp_fxns.h  ucp_py_ucp_fxns_wrapper.pyx
scripts/: build-py-mod.sh  clean.sh  kill-all.sh  setup.sh  start-all.sh  start-ucx-dask-gpu-scheduler.sh  start-ucx-dask-gpu-worker.sh
tests/: benchmark_multiple_processes_all_to_all.py  client-server-duality.py  conftest.py  cpu-util.py  dask-dot-prod.py  data-validate.py  future-recv-fast.py  multiple-client-ep-same-addr.py  multiple-listener-client-test.py  multiple-listener-test.py  perf_echo.py  recv.py  send-recv-py-obj.py  send.py  serve_client.py  serve_loop.py  shared-server-client.py  single.py  test-callback.py  test-duality-data-validity-msg-preallocated.py  test-duality-data-validity.py  test-duality.py  test-send-blind-recv-python-bytes.py  test-send-blind-recv-python-obj.py  test-send-recv-python-obj.py  test-server-listen-accept-future-await.py  test-server-listen-accept-future-recv.py  test-server-listen-accept-future.py  test-server-listen-accept.py  test-ucx-w-dask-workers.py  test_addr.py  test_benchmark_cluster.py  test_buffer_region.py  test_config.py  test_custom_ep_send_recv.py  test_custom_send_recv.py  test_dask_gpu_scatter.py  test_dask_sum.py  test_default_address.py  test_disconnect.py  (+40 more)
tests/debug-tests/: .send.py.swp  README.md  multi-node-ib-test.sh  recv.py  scheduler.sh  send.py  test_endpoint_error_callback.py  test_send_recv_many_workers.py  utils.py
ucp/: __init__.py  _utils.py  _version.py  application_context.py  asyncssh_module.py  comm.py  continuous_ucx_progress.py  core.py  endpoint_reuse.py  exceptions.py  public_api.py  send_recv.py  utils.py  utils_multi_node.py
ucp/_libs/: __init__.pxd  __init__.py  arr.pxd  arr.pyi  arr.pyx  buffer_interface.pyx  core.py  core.pyx  core_dep.pxd  exceptions.py  packed_remote_key.pyx  send_recv.pyx  topological_distance.pxd  topological_distance.pyx  topological_distance_dep.pxd  transfer.pyx  transfer_am.pyx  transfer_common.pyx  transfer_stream.pyx  transfer_tag.pyx  typedefs.pyx  ucp_py.pyx  ucp_py_buffer_helper.pyx  ucp_py_ucp_fxns_wrapper.pyx  ucp_tiny.pyx  ucp_tiny_dep.pxd  ucx_address.pyx  ucx_api.pyi  ucx_api.pyx  ucx_api_dep.pxd  ucx_context.pyx  ucx_endpoint.pyx  ucx_listener.pyx  ucx_memory_handle.pyx  ucx_object.pyx  ucx_request.pyx  ucx_rkey.pyx  ucx_rma.pyx  ucx_worker.pyx  ucx_worker_cb.pyx  (+6 more)
ucp/_libs/src/: buffer_ops.c  buffer_ops.h  c_util.c  c_util.h  common.h  (+5 more)
ucp/benchmarks/: README.md  __init__.py  asyncssh.py  base_backend.py  cudf_merge.py  send_recv.py  send_recv_core.py  ucp_async_backend.py  ucp_core_backend.py  utils.py
ucp_py/: __init__.py  _server.py  _utils.py
ucp_py/_libs/: buffer_ops.c  buffer_ops.h  common.h  ucp_py.pyx  ucp_py_buffer_helper.pyx  ucp_py_ucp_fxns.c  ucp_py_ucp_fxns.h  ucp_py_ucp_fxns_wrapper.pyx  ucp_wrappers.pxd
(+20 files in other folders)
