# Copyright (c) 2022, NVIDIA CORPORATION.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
build-backend = "setuptools.build_meta:__legacy__"
requires = [
    "setuptools",
    "cython>=0.29,<0.30",
    "tomli  ; python_version < '3.11'",
]

[project]
name = "ucx-py"
dynamic = [
    "version",
]
description = "Python Bindings for the Unified Communication X library (UCX)"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "NVIDIA Corporation" },
]
license = { text = "BSD-3-Clause" }
requires-python = ">=3.6"
dependencies = [
    "numpy",
    "psutil",
    "pynvml",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware",
    "Topic :: System :: Systems Administration",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]

[project.urls]
Homepage = "https://github.com/rapidsai/ucx-py"

[tool.setuptools]
license-files = ["LICENSE"]
package-dir = {"" = "."}
packages = ["ucp"]
zip-safe = false

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "ucp/_version.py"
versionfile_build = "ucp/_version.py"
tag_prefix = "v"
parentdir_prefix = "ucp-"
