[metadata]
license_files = LICENSE

[versioneer]
VCS = git
style = pep440
versionfile_source = ucp/_version.py
versionfile_build = ucp/_version.py
tag_prefix = v
parentdir_prefix = ucp-

[flake8]
exclude = __init__.py
ignore =
    # line break before binary operator
    W503
    # whitespace before :
    E203


[isort]
line_length=79
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
order_by_type=True
known_dask=
    dask
    distributed
    dask_cuda
known_rapids=
    rmm
    cuml
    cugraph
    dask_cudf
    cudf
known_first_party=
    ucp
default_section=THIRDPARTY
sections=FUTURE,STDLIB,THIRDPARTY,DASK,RAPIDS,FIRSTPARTY,LOCALFOLDER
skip=
    .eggs
    .git
    .hg
    .mypy_cache
    .tox
    .venv
    build
    dist
    __init__.py
